5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1752_1522.log
== TEST (2019-05-16 17:05:18) 
-- CODE:
contador = 0
while (contador < 5):
	print(contador)
	contador = contador +1
else:
	print("O sleep while foi concluido com sucesso!")
-- OUTPUT:
0
1
2
3
4
O sleep while foi concluido com sucesso!
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:01) 
-- CODE:
# VARIAVEIS
quan1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (contador < 20):
	print(contador)
	contador = contador + quant1 - despM + quantM - quantR
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    contador = contador + quant1 - despM + quantM - quantR
NameError: name 'quant1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:12) 
-- CODE:
# VARIAVEIS
quan1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador < 20):
	print(contador)
	contador = contador / quant1 - despM + quantM - quantR
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    contador = contador / quant1 - despM + quantM - quantR
NameError: name 'quant1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:20:28) 
-- CODE:
# VARIAVEIS
quan1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador < 20):
	print(contador)
	contador = contador / quant1 - despM + quantM - quantR
-- EXECUTION TIME:
0.151297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1522/main.py", line 10, in <module>
    contador = contador / quant1 - despM + quantM - quantR
NameError: name 'quant1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:34) 
-- CODE:
# VARIAVEIS
quan1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))
ganhos = quant1 + quatM
perdas = despM + quantR
total = ganhos - perdas
contador = 1
while (total >= 5):
	print(contador)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    ganhos = quant1 + quatM
NameError: name 'quant1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:29:53) 
-- CODE:
# VARIAVEIS
quan1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))
ganhos = quant1 + quatM
perdas = despM + quantR
total = ganhos - perdas
contador = 1
while (total >= 5):
	print(contador)
-- EXECUTION TIME:
0.164775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1522/main.py", line 6, in <module>
    ganhos = quant1 + quatM
NameError: name 'quant1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:04) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (quan1 >= despM and quantM >=quatR):
	print(contador)
	contator = contador + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (quan1 >= despM and quantM >=quatR):
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:23) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (quan1 >= despM or quantM >=quatR):
	print(contador)
	contator = contador + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (quan1 >= despM or quantM >=quatR):
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:35:42) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantM = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (quan1 >= despM or quantM >=quatR):
	print(contador)
	contator = contador + 1
-- EXECUTION TIME:
0.142045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1522/main.py", line 8, in <module>
    while (quan1 >= despM or quantM >=quatR):
NameError: name 'quan1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:22) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (contador < 0):
	print(contador)
	contator = (quant1 - despM + quantC - quant) < 0 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (quan1 >= despM or quantM >=quatR):
NameError: name 'quan1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:40:40) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (contador < 0):
	print(contador)
	contator = (quant1 - despM + quantC - quant) < 0 
-- EXECUTION TIME:
0.136022
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:

-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:13) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 - despM + quant C -quantR > 0):
	print(contador)
-- ERROR:
File "XXXX", line 8
    while (quant1 - despM + quant C -quantR > 0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:16) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 - despM + quant C -quantR > 0):
	print(contador)
-- ERROR:
File "XXXX", line 8
    while (quant1 - despM + quant C -quantR > 0):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:19) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 - despM o+ quantC - quantR > 0):
	print(contador)
-- ERROR:
File "XXXX", line 8
    while (quant1 - despM o+ quantC - quantR > 0):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:21) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 - despM o+ quantC - quantR > 0):
	print(contador)
-- ERROR:
File "XXXX", line 8
    while (quant1 - despM o+ quantC - quantR > 0):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:49) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 0):
	print(contador)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:23) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 0):
	print(contador)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:43) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 20):
	print(contador)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:50) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant = quant - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:58) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant = quant - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:37) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:40) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:40) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:44) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:44) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:41) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:43) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 1
while (contador =! 0):
	print(contador)
	quant1 = quat1 - despM
	quant1 = quant1 + quanC
	quant1 = quantC - quantR
-- ERROR:
File "XXXX", line 8
    while (contador =! 0):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:18:04) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 0):
	print(contador)
-- EXECUTION TIME:
2018.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:18:04) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 0):
	print(contador)
-- EXECUTION TIME:
2018.1
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:18:04) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 0):
	print(contador)
-- EXECUTION TIME:
2018.08
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:03) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 20):
	print(contador)
-- EXECUTION TIME:
2022.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:19:03) 
-- CODE:
# VARIAVEIS
quant1 = int(input("Quantidade inicial?: "))
despM = int(input("Despesa mensal da coroa?: "))
quantC = int(input("Quantidade de moedas coletadas?: "))
quantR = int(input("Quantidade roubada?: "))

contador = 0
while (quant1 >= despM or quantC >= quantR > 20):
	print(contador)
-- EXECUTION TIME:
2022.08
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
